2005-08-31 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.cpp: Fix indent.

2005-08-30 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Version-0.1.3.

2005-08-30 Takuro Ashie <ashie@homa.ne.jp>

	* data/scim-canna.png: Add.

2005-08-29 Takuro Ashie <ashie@homa.ne.jp>

	* configured.ac: Version-0.1.2.

2005-08-23 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_factory.cpp: Add authors.

2005-08-22 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_factory.cpp: Disconnect "reload" signal of
	config object. Thanks James Su.

2005-07-31 Takuro Ashie <ashie@homa.ne.jp>

	* skim/setupui/cannaui.ui: Add UI.
	  skim/setupui/scimcannasettingplugin.cpp: Remove wasted code.

2005-07-29 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Version-0.1.1.

2005-07-20 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine.h: Fix a build problem.
	Thanks reporting > Thierry Vignaud & UTUMI Hirosi

2005-07-10 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_setup.cpp: Set tooltips.
	* po/ja.po: Update.

2005-05-17 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac; Sorry, AM_INIT_AUTOMAKE(1.9), not AM_PREREQ.

2005-05-17 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac; Add AM_PREREQ & AC_PREREQ.

2005-04-29 Takuro Ashie <ashie@homa.ne.jp>

	* configure.ac: Version-0.1.0.

2005-04-28 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine.cpp, src/scim_canna_imengine.h,
	  src/canna_jrkanji.cpp, src/scim_canna_jrkaji.h:
	Make sure to show preedit string and aux string.

2005-04-28 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_setup.cpp: Refactoring.

2005-04-06 Takuro Ashie <ashie@homa.ne.jp>

	* src/canna_jrkanji.cpp, src/scim_canna_imengine.cpp,
	  src/scim_canna_imengine.h:
	Added visible flag for guide line string.

2005-03-24 Takuro Ashie <ashie@homa.ne.jp>

	* src/scim_canna_imengine_factory.cpp,
	  src/scim_canna_imengine_factory.h,
	  src/scim_canna_imenigne_prefs.h, src/canna_imengine_setup.cpp