@@ -97,16 +97,18 @@ extern "C" {
 CannaFactory::CannaFactory (const String &lang,
                             const String &uuid,
                             const ConfigPointer &config)
-    : m_uuid (uuid),
-      m_config (config),
+    : m_uuid                   (uuid),
+      m_config                 (config),
       m_specify_init_file_name (SCIM_CANNA_CONFIG_SPECIFY_INIT_FILE_NAME_DEFAULT),
-      m_specify_server_name (SCIM_CANNA_CONFIG_SPECIFY_SERVER_NAME_DEFAULT),
-      m_init_file_name (SCIM_CANNA_CONFIG_INIT_FILE_NAME_DEFAULT),
-      m_server_name (SCIM_CANNA_CONFIG_SERVER_NAME_DEFAULT)
+      m_specify_server_name    (SCIM_CANNA_CONFIG_SPECIFY_SERVER_NAME_DEFAULT),
+      m_init_file_name         (SCIM_CANNA_CONFIG_INIT_FILE_NAME_DEFAULT),
+      m_server_name            (SCIM_CANNA_CONFIG_SERVER_NAME_DEFAULT)
 {
     SCIM_DEBUG_IMENGINE(1) << "Create Canna Factory :\n";
     SCIM_DEBUG_IMENGINE(1) << "  Lang : " << lang << "\n";
     SCIM_DEBUG_IMENGINE(1) << "  UUID : " << uuid << "\n";
+
+    scim_string_to_key_list (m_on_off_key, SCIM_CANNA_CONFIG_ON_OFF_KEY_DEFAULT);
 
     if (lang.length () >= 2)
         set_languages (lang);
@@ -179,6 +181,8 @@ CannaFactory::reload_config (const ConfigPointer &config)
 {
     if (!config) return;
 
+    String str;
+
     m_specify_init_file_name
         = config->read (String (SCIM_CANNA_CONFIG_SPECIFY_INIT_FILE_NAME),
                         SCIM_CANNA_CONFIG_SPECIFY_INIT_FILE_NAME_DEFAULT);
@@ -191,9 +195,12 @@ CannaFactory::reload_config (const ConfigPointer &config)
     m_server_name
         = config->read (String (SCIM_CANNA_CONFIG_SERVER_NAME),
                         String (SCIM_CANNA_CONFIG_SERVER_NAME_DEFAULT));
+    str = config->read (String (SCIM_CANNA_CONFIG_ON_OFF_KEY),
+                        String (SCIM_CANNA_CONFIG_ON_OFF_KEY_DEFAULT));
+    scim_string_to_key_list (m_on_off_key, str);
 
     m_actions.clear ();
 
     // edit keys
-    //APPEND_ACTION (COMMIT,                  action_commit_with_learn);
+    //APPEND_ACTION (COMMIT, action_commit_with_learn);
 }
