@@ -27,11 +27,13 @@
 #define SCIM_CANNA_CONFIG_SPECIFY_SERVER_NAME            "/IMEngine/Canna/SpecifyServerName"
 #define SCIM_CANNA_CONFIG_INIT_FILE_NAME                 "/IMEngine/Canna/InitFileName"
 #define SCIM_CANNA_CONFIG_SERVER_NAME                    "/IMEngine/Canna/ServerName"
+#define SCIM_CANNA_CONFIG_ON_OFF_KEY                     "/IMEngine/Canna/OnOffKey"
 
 #define SCIM_CANNA_CONFIG_SPECIFY_INIT_FILE_NAME_DEFAULT false
 #define SCIM_CANNA_CONFIG_SPECIFY_SERVER_NAME_DEFAULT    false
 #define SCIM_CANNA_CONFIG_INIT_FILE_NAME_DEFAULT         (scim_get_home_dir() + String("/.canna"))
 #define SCIM_CANNA_CONFIG_SERVER_NAME_DEFAULT            "localhost"
+#define SCIM_CANNA_CONFIG_ON_OFF_KEY_DEFAULT             "Zenkaku_Hankaku,Shift+space"
 
 #endif /* __SCIM_CANNA_PREFS_H__ */
 /*
