@@ -1,3 +1,9 @@
+2005-09-01 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/canna_jrkanji.{cpp,h}, src/scim_canna_imengine.cpp,
+	  src/scim_canna_imengine_factory.{cpp,h}, src/scim_canna_prefs.h:
+	Add on/off key.
+
 2005-08-31 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/canna_jrkanji.cpp: Fix indent.
